<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/message_text_size"
        android:id="@+id/textHello" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_name"
        android:id="@+id/textLabelName"
        android:layout_below="@+id/textHello"
        android:layout_alignParentStart="true"
        android:layout_marginTop="69dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/person_name"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_gravity="center"
        android:layout_alignTop="@+id/textLabelName"
        android:layout_toEndOf="@+id/textLabelName"
        android:layout_marginStart="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_button"
        android:id="@+id/displayButton"
        android:layout_below="@+id/textLabelName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_button"
        android:id="@+id/clearButton"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/displayButton"
        android:layout_below="@+id/displayButton" />

</RelativeLayout>
